[tool.poetry]
name = "pcnn"
version = "0.1.0"
description = ""
authors = ["Loris Di Natale <loris.dinatale@empa.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
torch = "==1.12.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
lab = "^7.2"
jupyterlab = "^3.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
