[tool.poetry]
name = "pcnns"
version = "0.1.3"
description = ""
authors = ["Loris Di Natale <loris.dinatale@netplus.ch>"]
readme = "README.md"
packages = [{include = "pcnn"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
numpy = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
